--- a/Warhammer/40k_calc.html
+++ b/Warhammer/40k_calc.html
@@ -298,7 +298,7 @@
                     }
                 },
             },
-            "Redemptor Dreadnaught": {
+            "Redemptor Dreadnought": {
                 "keywords": ["Deathwing", "Faction: Adeptus Astartes", "Imperium", "Redemptor Dreadnought", "Vehicle", "Walker"],
                 "R": 8,
                 "T": 10,
@@ -916,6 +916,8 @@
             let times = geti("rounds")
             log_enabled = times < 5
             log("Calculating...")
+
+            // If a model is equipped with one or more Pistols, unless it is a MONSTER or VEHICLE model, it can either shoot with its Pistols or with all of its other ranged weapons. Declare whether such a model will shoot with its Pistols or its other ranged weapons before selecting targets.
             let has_rifle = false
             for (let i = 1; i < 50; ++i) {
                 let weapon = document.getElementById(`weapon${i}`)
@@ -924,12 +926,13 @@
                 let weapon_keywords = gets(`keywords${i}`).toUpperCase().split(/, */)
                 if (geti(`range${i}`) > 0 && !weapon_keywords.includes("PISTOL")) {
                     has_rifle = true
-                    log(`${weapon.innerText} is not a PISTOL.`)
+                    //log(`${weapon.innerText} is not a PISTOL.`)
                     break
                 }
             }
-            let pistols_only = inches < 1 || prefer_pistols.checked || !has_rifle
-            log(pistols_only ? "Pistols only!" : "No pistols!")
+            let pistols_only = !source_is_vehicle && !source_is_monster && (inches < 1 || prefer_pistols.checked || !has_rifle)
+            if (pistols_only) log("The only ranged attacks will be using pistols!")
+
             // Use up to 49 weapons.
             for (let i = 1; i < 50; ++i) {
                 let weapon = document.getElementById(`weapon${i}`)
@@ -945,18 +948,9 @@
 
                 const weapon_keywords = gets(`keywords${i}`).toUpperCase().split(/, */)
                 let is_pistol = weapon_keywords.includes("PISTOL")
-                // Choose either pistols or other ranged weapons!
-                if (R > 1 && !is_pistol) {
-                    if (pistols_only) {
-                        log("Pistols only.")
-                        continue
-                    }
-                    // If a model is equipped with one or more Pistols, unless it is a MONSTER or VEHICLE model, it can either shoot with its Pistols or with all of its other ranged weapons. Declare whether such a model will shoot with its Pistols or its other ranged weapons before selecting targets.
-                    if (!source_is_monster && !source_is_vehicle) {
-                        pistols_only = is_pistol  // XXX: Assumes first eligible ranged type is best.
-                        if (pistols_only) log("Using pistols only.")
-                        else log("Skipping pistols.")
-                    }
+                if (pistols_only && R > 0 && !is_pistol) {
+                    log("Pistols only.")
+                    continue
                 }
                 if (is_pistol && !pistols_only) {
                     log("Skipping pistol.")
